[Enh] new dashboard layout. Filters
